--- a/OpenSatMap.ipynb
+++ b/OpenSatMap.ipynb
@@ -30,6 +30,32 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Mount Google Drive and clone the repository"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "!git clone https://github.com/bjzhb666/OpensatMap-demo/tree/main"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "zqYbRb40Icxg"
       },
