update github link

--- a/OpenSatMap.ipynb
+++ b/OpenSatMap.ipynb
@@ -51,7 +51,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "!git clone https://github.com/bjzhb666/OpensatMap-demo/tree/main"
+        "!git clone https://github.com/bjzhb666/OpensatMap-demo.git"
       ]
     },
     {
