add igoogle drive mount

--- a/OpenSatMap.ipynb
+++ b/OpenSatMap.ipynb
@@ -101,12 +101,12 @@
         "import matplotlib.pyplot as plt\n",
         "import matplotlib.image as mpimg\n",
         "\n",
-        "img1 = mpimg.imread('flyover2_0_0_sat.png')\n",
+        "img1 = mpimg.imread('OpensatMap-demo/flyover2_0_0_sat.png')\n",
         "plt.imshow(img1)\n",
         "plt.axis('off')\n",
         "plt.show()\n",
         "\n",
-        "img2 = mpimg.imread('roundabout5_-1_-1_sat.png')\n",
+        "img2 = mpimg.imread('OpensatMap-demo/roundabout5_-1_-1_sat.png')\n",
         "plt.imshow(img2)\n",
         "plt.axis('off')\n",
         "plt.show()"
@@ -158,8 +158,8 @@
         }
       ],
       "source": [
-        "json_data_RA = read_json('RA.json')\n",
-        "json_data_FO = read_json('FO.json')\n",
+        "json_data_RA = read_json('OpensatMap-demo/RA.json')\n",
+        "json_data_FO = read_json('OpensatMap-demo/FO.json')\n",
         "\n",
         "for name in json_data_RA:\n",
         "    print(name)\n",
